<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="4" >

        <Button
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonTapped"
            android:text="@string/hello_"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/doyouspeakenglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1"
            android:text="Do you speak &#10; English?"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/goodevening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/ilivein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/I"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wel"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/mynameis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/howareyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1"
            android:onClick="buttonTapped"/>

    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>